# kyopro-cpplib

./: .clang-format  .clang-tidy  .gitignore  .rtx.toml  LICENSE  Makefile  README.md  _config.yml  compile_flags.txt  index.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml  verify.yml
.verify-helper/: config.toml  timestamps.remote.json
.verify-helper/docs/: _config.yml
Algorithm/: doubling-pow.hpp  doubling-pow.hpp.md
Data-Structure/Disjoint-Set/: union-find.hpp  union-find.hpp.md
Data-Structure/Range-Accumulate/: FenwicTree.hpp  FenwicTree.hpp.md  cumulative-sum.hpp  cumulative-sum.hpp.md  foldLR.hpp  foldLR.hpp.md
Graph/: graph-template.hpp  graph-template.hpp.md
Graph/Minimum-Spanning-Tree/: kruskal.hpp  kruskal.hpp.md
Graph/Shortest-Path/: bfs.hpp  bfs.hpp.md  dijkstra.hpp  dijkstra.hpp.md
Math/Combinatorics/: binomial-O(K).cpp  binomial-O(K).cpp.md  binomial-table-O(NN).cpp  binomial-table-O(NN).cpp.md  binomial-table-const-N.cpp  binomial-table-const-N.cpp.md  factorials.hpp  factorials.hpp.md
Math/Modulo/: compile-time-mod-holder.hpp  mersenne-prime-number-mod-int.hpp  mersenne-prime-number-mod-int.hpp.md  mod-int.hpp  mod-int.hpp.md  runtime-mod-holder.hpp
Math/Number-Theory/: divisor-count-table.hpp  divisor-count-table.hpp.md  enumerate-divisors.hpp  enumerate-divisors.hpp.md  eratosthenes-sieve.hpp  eratosthenes-sieve.hpp.md  extgcd.hpp  extgcd.hpp.md  is-prime.hpp  is-prime.hpp.md  osa_k.hpp  osa_k.hpp.md  prime-factorize.hpp  prime-factorize.hpp.md  totient-func.hpp  totient-func.hpp.md
String/: rabin-karp.hpp  rabin-karp.hpp.md  rolling-hash.hpp  rolling-hash.hpp.md
Util/: all-macro.hpp  all-macro.hpp.md  at.hpp  at.hpp.md  bye.hpp.md  chminmax.hpp  chminmax.hpp.md  constexpr-randint.hpp  constexpr-randint.hpp.md  cstring-hash.hpp  cstring-hash.hpp.md  div-ceil.hpp  div-ceil.hpp.md  fillContainer.hpp  fillContainer.hpp.md  fix-point.hpp  fix-point.hpp.md  indexing-wrapper.hpp  indexing-wrapper.hpp.md  int-alias.hpp  int-alias.hpp.md  int-infinity.hpp  int-infinity.hpp.md  is-within-range.hpp  is-within-range.hpp.md  make-four-neighbor-enumerator.hpp  make-four-neighbor-enumerator.hpp.md  makeVec.hpp  makeVec.hpp.md  project.hpp  project.hpp.md  randoms.hpp  randoms.hpp.md  rep-macro.hpp  rep-macro.hpp.md  runlength.hpp  runlength.hpp.md  timer.hpp  timer.hpp.md  zip.hpp  (+1 more)
Util/Debug/: debug.hpp  debug.hpp.md  errln.hpp  errln.hpp.md  graph-debug.hpp  graph-debug.hpp.md
Util/IO/: container-input.hpp  container-input.hpp.md  container-io.hpp  container-io.hpp.md  container-output.hpp  container-output.hpp.md  io-setup.hpp  join-into-ostream.hpp.md  println.hpp  println.hpp.md  read-directed-graph.hpp  read-directed-graph.hpp.md  read-undirected-graph.hpp  read-undirected-graph.hpp.md  read.hpp  read.hpp.md  tuple-print.hpp  var-declaration-with-input.hpp  var-declaration-with-input.hpp.md
assets/css/: style.scss
bits-dir/bits/: Makefile  stdc++.h
export/: Makefile  long-snip.ultimate-vim-snippets  short-snip.ultimate-vim-snippets  short-snippet.vscode.json  snippet.vscode.json  template-prototype.cpp  template-prototype.cpp.md  template.cpp  template.cpp.md
include/data-structure/: union-find.hpp
include/math/: mod-int.hpp  pow-doubling.hpp
include/template-parts/: bye.hpp  constant.hpp  container-io.hpp  div-ceil.hpp  div-floor.hpp  join-into-ostream.hpp  makeVec.hpp  println.hpp  rep-macro.hpp  template.cpp  tuple-print.hpp  type-alias.hpp  (+1 more)
scripts/: clang-format.sh  mylint.py
short-snip/: bye.cpp  bye.cpp.md  div-ceil.cpp  div-ceil.cpp.md  io-setup.cpp.md  mod1.cpp  mod1.cpp.md  mod2.cpp  mod2.cpp.md  possible.cpp  possible.cpp.md  precision.cpp  precision.cpp.md  sigma.cpp  sigma.cpp.md  sqr.cpp  sqr.cpp.md  uniq.cpp  uniq.cpp.md  yay.cpp  yay.cpp.md  yesno.cpp  yesno.cpp.md
test/: DPL_5_A.test.cpp  DSL_1_A.test.cpp  Makefile
tests/: CMakeLists.txt  Makefile
tests/armkn/algo/mapping/: cycle_finder.cpp  doubling.cpp  doubling_with_monoid.cpp
tests/armkn/algo/numeric/: bin_search_int.cpp  bin_search_integer.cpp  optimize_convex_int.cpp  optimize_convex_real.cpp
tests/armkn/dbg/: dbg.cpp
tests/armkn/dp/: k_choose_prod_sum.cpp
tests/armkn/dsu/: union_find.cpp
tests/armkn/fmt/: printer.cpp
tests/armkn/graph/adapter/: edge_destination.cpp
tests/armkn/graph/mst/: kruskal.cpp
tests/armkn/graph/tree/: doubling_lca.cpp  rooted_tree.cpp
tests/armkn/math/comb/: binom_fn.cpp  binom_table.cpp  binom_table_const_n.cpp  factorials.cpp  lucas_binom.cpp
tests/armkn/math/integer/: divisor_count_table.cpp  divisors.cpp  eratosthenes_sieve.cpp  ext_gcd.cpp  ilog2.cpp  is_prime.cpp  isqrt.cpp  osa_k.cpp  prime_factorize.cpp  prime_numbers.cpp
tests/armkn/rangefold/: cumulative_sum.cpp  cumulative_sum_2d.cpp  fenwick_tree.cpp
tests/armkn/rangequery/: cumulative_sum.cpp  fenwick_tree.cpp
tests/armkn/set/: closed_range.cpp  closed_range_set.cpp
tests/armkn/str/: rolling_hash.cpp
tests/armkn/util/: dbg.cpp
tests/armkn/util/alias/: heapq.cpp
tests/armkn/util/constants/: infinity.cpp
tests/armkn/util/fn/: floor_pow2.cpp  hamming_distance.cpp  ilog2.cpp  isqrt.cpp  match_2d.cpp  rotate_matrix.cpp  runlength.cpp  runlength_returns_iter.cpp  shakutori.cpp  sigma.cpp
tests/armkn/util/macro/: fn.cpp
tests/armkn/util/type_traits/: is_iterable.cpp  is_key_value_map.cpp  is_random_accessible.cpp  is_string_like.cpp
tests/scripts/: gen_compile_flags_txt.sh
tool/: auto-gen.sh  build-or-lint.sh  export.sh  gen-codesnippet.py  gen-codesnippet.py.md  gen-snippet.py  gen-snippet.py.md  gen-template.py  gen-template.py.md  include-expander.go  progReader.py  progReader.py.md
(+174 files in other folders)
