[tool.poetry]
name = "kyopro-cpplib"
version = "0.1.0"
description = ""
authors = ["arumakan1727 <33191176+arumakan1727@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.1.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
